--- a/android_search/res/layout/hotel_list_item.xml
+++ b/android_search/res/layout/hotel_list_item.xml
@@ -91,34 +91,34 @@
 
                 <!-- trip advisor -->
 
-                <LinearLayout
-                    android:id="@+id/tripAdvisorCont"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/rating"
-                    android:layout_alignParentStart="true"
-                    android:gravity="start|bottom"
-                    android:orientation="horizontal" >
+<!--                 <LinearLayout -->
+<!--                     android:id="@+id/tripAdvisorCont" -->
+<!--                     android:layout_width="wrap_content" -->
+<!--                     android:layout_height="wrap_content" -->
+<!--                     android:layout_below="@id/rating" -->
+<!--                     android:layout_alignParentStart="true" -->
+<!--                     android:gravity="start|bottom" -->
+<!--                     android:orientation="horizontal" > -->
 
                     
                      
-                    <ImageView
-                        android:id="@+id/tripAdvisorStrip"
-                        android:layout_width="100dip"
-                        android:layout_height="20dip"
-                        android:contentDescription="@string/trip_advisor_icon"
-                        android:transitionName="hotelTripAdvRating" />
+<!--                     <ImageView -->
+<!--                         android:id="@+id/tripAdvisorStrip" -->
+<!--                         android:layout_width="100dip" -->
+<!--                         android:layout_height="20dip" -->
+<!--                         android:contentDescription="@string/trip_advisor_icon" -->
+<!--                         android:transitionName="hotelTripAdvRating" /> -->
 
-                    <TextView
-                         android:id="@+id/tripAdvisorReviews"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_marginEnd="2dip"
-                         android:text="(3,456)"
-                         android:textColor="#afafaf"
-                         android:textSize="11sp"
-                         tools:ignore="HardcodedText" />
-                </LinearLayout>
+<!--                     <TextView -->
+<!--                          android:id="@+id/tripAdvisorReviews" -->
+<!--                          android:layout_width="wrap_content" -->
+<!--                          android:layout_height="wrap_content" -->
+<!--                          android:layout_marginEnd="2dip" -->
+<!--                          android:text="(3,456)" -->
+<!--                          android:textColor="#afafaf" -->
+<!--                          android:textSize="11sp" -->
+<!--                          tools:ignore="HardcodedText" /> -->
+<!--                 </LinearLayout> -->
 			    
                 
                 <!-- Price -->
@@ -128,7 +128,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#ee8cc34b"
-                        android:layout_below="@id/tripAdvisorCont"
+                        android:layout_below="@id/rating"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:gravity="center_vertical|end"
