--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -3,17 +3,26 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginLeft="2dip"
-    android:layout_marginTop="2dip"
      >
 
-      <LinearLayout
+      <com.virtual_hotel_agent.search.util.ChatBalloon 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:background="@drawable/me_chat_bubble"
           android:animateLayoutChanges="true"
-          android:orientation="horizontal"
+          android:background="#fff"
+          android:elevation="6dp"
+          android:layout_marginLeft="2dp"
+          android:layout_marginBottom="8dp"
            >
+<!--           android:background="@drawable/me_chat_bubble" -->
+
+		<LinearLayout 
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:background="#fff"
+          android:padding="10dp"
+		    >
 
 	      <TextView
 	            android:id="@+id/label"
@@ -73,6 +82,6 @@
 	          
 	      </RelativeLayout>
 
-	      
- 	</LinearLayout>
+	      </LinearLayout>
+ 	</com.virtual_hotel_agent.search.util.ChatBalloon>
 </LinearLayout>
