--- a/android_search/res/drawable/custom_button_bad.xml
+++ b/android_search/res/drawable/custom_button_bad.xml
@@ -2,15 +2,13 @@
     <ripple xmlns:android="http://schemas.android.com/apk/res/android"
         android:color="?android:colorControlHighlight">
 <item>
-        <shape 
+      <shape 
         android:shape="oval">
       <solid
-          android:startColor="#8484d4"
-          android:endColor="#4747a7"
-          android:angle="315" />
+          android:color="#FFFF00" />
       <stroke
           android:width="1dp"
-          android:color="#5599ff" />
+          android:color="#FFEB3B" />
       
   </shape>
 
